doujgnut right card

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -91,7 +91,7 @@
             </section>
 
             <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-              <div class="container-fluid py-5">
+              <div class="container-fluid py-3">
                 <h1 class="display-5 fw-bold">Краткая характеристика</h1>
                 <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
               </div>
@@ -129,7 +129,7 @@
               </div>
 
               <div class="col-md-6">
-                <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                <div class="h-100 p-3 bg-body-tertiary border rounded-3">
                     <div id="chart-container">
                         <canvas id="myChart"></canvas>
                     </div>
@@ -148,9 +148,10 @@
 
               <div class="col-md-6 mb-4">
                 <div class="h-100 p-5 border rounded-3">
-                  <h2>Change the background</h2>
-                  <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-                  <button class="btn btn-outline-secondary" type="button">Example button</button>
+                  <h2>Основные предсказания</h2>
+                  <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
+                  <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
+                  <button class="col-md-6 mt-4 btn btn-outline-secondary" type="button">Посмотреть</button>
                 </div>
               </div>
             </div>
