--load test modal window

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -151,7 +151,26 @@
                   <h2>Основные предсказания</h2>
                   <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
                   <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
-                  <button class="col-md-6 mt-4 btn btn-outline-secondary" type="button">Посмотреть</button>
+                  <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                </div>
+              </div>
+            </div>
+
+            <!-- Тестовое Модальное окно -->
+            <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Заголовок окна</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+                  </div>
+                  <div class="modal-body">
+                    Содержимое модального окна.
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                    <button type="button" class="btn btn-primary">Сохранить изменения</button>
+                  </div>
                 </div>
               </div>
             </div>
