--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -156,31 +156,23 @@
               </div>
             </div>
 
-            <!-- Тестовое Модальное окно -->
-            <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Заголовок окна</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
-                  </div>
-                  <div class="modal-body">
-                    Содержимое модального окна.
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
-                    <button type="button" class="btn btn-primary">Сохранить изменения</button>
+            <div class="row align-items-md-stretch">
+                <div class="col-md-6 mb-4">
+                  <div class="h-100 p-5 border rounded-3">
+                    <h2>Основные предсказания</h2>
+                    <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
+                    <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
+                    <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
                   </div>
                 </div>
-              </div>
-            </div>
 
-            <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-              <div class="container-fluid py-5">
-                <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-                <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-                <button class="btn btn-primary btn-lg" type="button">Example button</button>
-              </div>
+                <div class="col-md-6 mb-4">
+                  <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                    <div class="radar-container">
+                        <canvas id="radarChart"></canvas>
+                    </div>
+                  </div>
+                </div>
             </div>
 
             <div class="row align-items-md-stretch">
@@ -232,6 +224,24 @@
             </footer>
         </div>
 
+        <!-- Тестовое Модальное окно -->
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Заголовок окна</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+              </div>
+              <div class="modal-body">
+                Содержимое модального окна.
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+                <button type="button" class="btn btn-primary">Сохранить изменения</button>
+              </div>
+            </div>
+          </div>
+        </div>
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -247,5 +257,6 @@
         <script src="theme-toggle.js"></script>
         <script src="firstchart.js"></script>
         <script src="donutchart.js"></script>
+        <script src="radarchart.js"></script>
     </body>
 </html>
