--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -255,8 +255,8 @@
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
         <script src="theme-toggle.js"></script>
-        <script src="firstchart.js"></script>
-        <script src="donutchart.js"></script>
-        <script src="radarchart.js"></script>
+        <script src="charts/firstchart.js"></script>
+        <script src="charts/donutchart.js"></script>
+        <script src="charts/radarchart.js"></script>
     </body>
 </html>
