--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -157,37 +157,52 @@
             </div>
 
             <div class="row align-items-md-stretch">
-                <div class="col-md-6 mb-4">
+                <div class="col-md-6 mb-4 h-100">
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
-                      <div class="list-group">
-                        <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                          <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+                      <div class="list-group w-100 h-100">
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                           <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
-                              <h6 class="mb-0">List group item heading</h6>
-                              <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+                              <h6 class="mb-0">Уровень возможного спроса</h6>
+                              <p class="mb-0 opacity-75">Спрос может упасть с течением времени.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">now</small>
+                            <small class="opacity-50 text-nowrap">mid</small>
                           </div>
                         </a>
-                        <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                          <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                           <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
-                              <h6 class="mb-0">Another title here</h6>
-                              <p class="mb-0 opacity-75">Some placeholder content in a paragraph that goes a little longer so it wraps to a new line.</p>
+                              <h6 class="mb-0">Характеристика конкурентоспособности</h6>
+                              <p class="mb-0 opacity-75">Стартап сможет спокойно сосущестовать с конкурентами.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">3d</small>
+                            <small class="opacity-50 text-nowrap">max</small>
                           </div>
                         </a>
-                        <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
-                          <img src="https://github.com/twbs.png" alt="twbs" width="32" height="32" class="rounded-circle flex-shrink-0">
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
                           <div class="d-flex gap-2 w-100 justify-content-between">
                             <div>
-                              <h6 class="mb-0">Third heading</h6>
-                              <p class="mb-0 opacity-75">Some placeholder content in a paragraph.</p>
+                              <h6 class="mb-0">Характеристика команды</h6>
+                              <p class="mb-0 opacity-75">С течением времени в команде могут возникнуть разногласия, так как общий индекс команды довольно низкий.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">1w</small>
+                            <small class="opacity-50 text-nowrap">low</small>
+                          </div>
+                        </a>
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                          <div class="d-flex gap-2 w-100 justify-content-between">
+                            <div>
+                              <h6 class="mb-0">Технологические инвестиции</h6>
+                              <p class="mb-0 opacity-75">Проект может потребовать в дальнейшем увеличение технологических инвестиций.</p>
+                            </div>
+                            <small class="opacity-50 text-nowrap">low</small>
+                          </div>
+                        </a>
+                        <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                          <div class="d-flex gap-2 w-100 justify-content-between">
+                            <div>
+                              <h6 class="mb-0">Реакция общества</h6>
+                              <p class="mb-0 opacity-75">Возможно лютого пиара не будет.</p>
+                            </div>
+                            <small class="opacity-50 text-nowrap">low</small>
                           </div>
                         </a>
                       </div>
@@ -195,7 +210,7 @@
                 </div>
 
                 <div class="col-md-6 mb-4">
-                  <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                  <div class="h-100 p-2 bg-body-tertiary border rounded-3">
                     <div class="radar-container">
                         <canvas id="radarChart"></canvas>
                     </div>
