--init test selector

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -101,13 +101,13 @@
               <div class="col-md-6">
                 <div class="h-100 rounded-3">
                     <div class="m-0 d-flex justify-content-center list-group list-group-checkable gap-2">
-                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="" checked>
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="base" checked>
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
                             Базовые предсказания
                         <span class="d-block small opacity-50">Предсказани, основанные на реальном датасете</span>
                         </label>
 
-                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="">
+                        <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="time-series">
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios2">
                             Предсказания на временных рядах
                             <span class="d-block small opacity-50">Предсказания, основанные на временных рядах</span>
@@ -128,7 +128,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-6 base-predisctions">
                 <div class="h-100 p-3 bg-body-tertiary border rounded-3">
                     <div id="chart-container">
                         <canvas id="myChart"></canvas>
@@ -137,7 +137,7 @@
               </div>
             </div>
 
-            <div class="row align-items-md-stretch">
+            <div class="row align-items-md-stretch base-predisctions">
                 <div class="col-md-6 mb-4">
                   <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                     <div class="donut-container">
@@ -146,7 +146,7 @@
                   </div>
                 </div>
 
-              <div class="col-md-6 mb-4">
+              <div class="col-md-6 mb-4 base-predisctions">
                 <div class="h-100 p-5 border rounded-3">
                   <h2>Основные предсказания</h2>
                   <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
@@ -156,7 +156,7 @@
               </div>
             </div>
 
-            <div class="row align-items-md-stretch">
+            <div class="row align-items-md-stretch base-predisctions">
                 <div class="col-md-6 mb-4 h-100">
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
                       <div class="list-group w-100 h-100">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 mb-4">
+                <div class="col-md-6 mb-4 base-predisctions">
                   <div class="h-100 p-2 bg-body-tertiary border rounded-3">
                     <div class="radar-container">
                         <canvas id="radarChart"></canvas>
@@ -218,7 +218,7 @@
                 </div>
             </div>
 
-            <div class="p-5 mb-4 bg-body-tertiary rounded-3">
+            <div class="p-5 mb-4 bg-body-tertiary rounded-3 base-predisctions">
               <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold">Что означают метрики?</h1>
                 <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
@@ -227,7 +227,7 @@
             </div>
 
             <footer class="pt-3 mt-4 text-body-secondary border-top">
-              &copy; 2024
+              &copy; 2025
             </footer>
         </div>
 
@@ -261,6 +261,7 @@
             crossorigin="anonymous"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="selector.js" defer></script>
         <script src="theme-toggle.js"></script>
         <script src="charts/firstchart.js"></script>
         <script src="charts/donutchart.js"></script>
