--load block bug fix

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -104,7 +104,7 @@
                         <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios1" value="base" checked>
                         <label class="list-group-item rounded-3 py-3" for="listGroupCheckableRadios1">
                             Базовые предсказания
-                        <span class="d-block small opacity-50">Предсказани, основанные на реальном датасете</span>
+                        <span class="d-block small opacity-50">Предсказания, основанные на реальном датасете</span>
                         </label>
 
                         <input class="list-group-item-check pe-none" type="radio" name="listGroupCheckableRadios" id="listGroupCheckableRadios2" value="time-series">
@@ -128,7 +128,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 base-predisctions">
+              <div class="col-md-6 base-predictions">
                 <div class="h-100 p-3 bg-body-tertiary border rounded-3">
                     <div id="chart-container">
                         <canvas id="myChart"></canvas>
@@ -137,7 +137,7 @@
               </div>
             </div>
 
-            <div class="row align-items-md-stretch base-predisctions">
+            <div class="row align-items-md-stretch base-predictions">
                 <div class="col-md-6 mb-4">
                   <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                     <div class="donut-container">
@@ -146,17 +146,17 @@
                   </div>
                 </div>
 
-              <div class="col-md-6 mb-4 base-predisctions">
-                <div class="h-100 p-5 border rounded-3">
-                  <h2>Основные предсказания</h2>
-                  <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
-                  <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
-                  <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                <div class="col-md-6 mb-4">
+                    <div class="h-100 p-5 border rounded-3">
+                        <h2>Основные предсказания</h2>
+                        <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
+                        <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
+                        <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                    </div>
                 </div>
-              </div>
             </div>
 
-            <div class="row align-items-md-stretch base-predisctions">
+            <div class="row align-items-md-stretch base-predictions">
                 <div class="col-md-6 mb-4 h-100">
                     <div class="d-flex flex-column flex-md-row align-items-center justify-content-center">
                       <div class="list-group w-100 h-100">
@@ -209,7 +209,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 mb-4 base-predisctions">
+                <div class="col-md-6 mb-4">
                     <div class="h-100 p-2 bg-body-tertiary border rounded-3">
                         <div class="radar-cntainert">
                             <canvas id="radarChart"></canvas>
@@ -217,7 +217,7 @@
                     </div>
                 </div>
 
-                <div class="p-5 mb-4 bg-body-tertiary rounded-3 base-predisctions">
+                <div class="p-5 mb-4 bg-body-tertiary rounded-3">
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Что означают метрики?</h1>
                     <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
