--load bug fix 2

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -128,7 +128,7 @@
                 </div>
               </div>
 
-              <div class="col-md-6 base-predictions">
+              <div class="col-md-6">
                 <div class="h-100 p-3 bg-body-tertiary border rounded-3">
                     <div id="chart-container">
                         <canvas id="myChart"></canvas>
@@ -218,15 +218,11 @@
                 </div>
 
                 <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-                <div class="container-fluid py-5">
-                    <h1 class="display-5 fw-bold">Что означают метрики?</h1>
-                    <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
-                    <button class="btn btn-primary btn-lg" type="button">Посмотреть метрики</button>
-                </div>
-            </div>
-
-            <div class="col-md-6 time-series-predictions">
-                <div class="h-100 p-3 bg-body-tertiary border rounded-3">
+                    <div class="container-fluid py-5">
+                        <h1 class="display-5 fw-bold">Что означают метрики?</h1>
+                        <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
+                        <button class="btn btn-primary btn-lg" type="button">Посмотреть метрики</button>
+                    </div>
                 </div>
             </div>
 
@@ -236,13 +232,13 @@
                     </div>
                 </div>
 
-                <div class="col-md-6 mb-4 time-series-predictions">
-                <div class="h-100 p-5 border rounded-3">
-                    <h2>Ничоси</h2>
-                    <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
-                    <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
-                    <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
-                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="h-100 p-5 border rounded-3">
+                        <h2>Ничоси</h2>
+                        <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели.</p>
+                        <p style="text-align: justify;">Большинство предсказаний будут отображаться в этой небольшой табличке. Здесь представлены суммарные характеристики предсказаний модели. Вы можете тапнуть на кнопулю и узнать больше.</p>
+                        <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
+                    </div>
                 </div>
             </div>
 
