--load multy doughnut

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -211,7 +211,7 @@
 
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-2 bg-body-tertiary border rounded-3">
-                        <div class="radar-cntainert">
+                        <div class="radar-containert">
                             <canvas id="radarChart"></canvas>
                         </div>
                     </div>
@@ -229,6 +229,9 @@
             <div class="row align-items-md-stretch time-series-predictions">
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
+                        <div class="donut-container">
+                            <canvas id="donutChart2"></canvas>
+                        </div>
                     </div>
                 </div>
 
@@ -281,6 +284,7 @@
         <script src="theme-toggle.js"></script>
         <script src="charts/firstchart.js"></script>
         <script src="charts/donutchart.js"></script>
+        <script src="charts/donutchart2.js"></script>
         <script src="charts/radarchart.js"></script>
     </body>
 </html>
