--init line chart

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -237,6 +237,14 @@
                 </div>
             </div>
 
+            <div class="p-5 mb-4 bg-body-tertiary rounded-3 time-series-predictions">
+                <div class="container-fluid py-2">
+                    <div class="line-container" style="min-height: 400px; width: 100%;">
+                        <canvas id="lineChart"></canvas>
+                    </div>
+                </div>
+            </div>
+
             <div class="p-5 mb-4 bg-body-tertiary rounded-3">
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Что означают метрики?</h1>
@@ -286,5 +294,6 @@
         <script src="charts/donutchart.js"></script>
         <script src="charts/donutchart2.js"></script>
         <script src="charts/radarchart.js"></script>
+        <script src="charts/linechart.js"></script>
     </body>
 </html>
