--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -230,7 +230,7 @@
                     <div class="h-100 p-5 border rounded-3">
                         <h2 class="mb-4">Динамика характеристик</h2>
                         <p style="text-align: justify;">Вы можете изучить прогнозируемую динамику ряда показателей, основанную на временных рядах.</p>
-                        <p style="text-align: justify;">В модальном окне доступны графики изменений этих показателей со временем, включая такие характеристики, как социальный индекс (social_idx), индекс спроса (demand_idx) и индекс конкуренции (comp_idx).</p>
+                        <p style="text-align: justify;">В модальном окне доступны графики изменений этих показателей со временем, включая такие характеристики, как социальный индекс (social_idx), индекс спроса (demand_idx) и индекс конкурентоспособности (comp_idx).</p>
                         <button class="col-md-6 mt-4 btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#myModal" type="button">Посмотреть</button>
                     </div>
                 </div>
@@ -266,7 +266,9 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
               </div>
               <div class="modal-body">
-                <h7>График распределения социального индекса</h7>
+                  <div class="chart-container" style="min-height: 400px; width: 100%;">
+                      <canvas id="modalChart1"></canvas>
+                  </div>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
@@ -293,5 +295,6 @@
         <script src="charts/donutchart2.js"></script>
         <script src="charts/radarchart.js"></script>
         <script src="charts/linechart.js"></script>
+        <script src="charts/modalchart1.js"></script>
     </body>
 </html>
