--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -221,7 +221,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-5 bg-body-tertiary border rounded-3">
                         <div class="donut-container">
-                            <canvas id="donutChart2"></canvas>
+                            <canvas id="horizontalChart" width="400" height="325"></canvas>
                         </div>
                     </div>
                 </div>
@@ -292,7 +292,7 @@
         <script src="theme-toggle.js"></script>
         <script src="charts/firstchart.js"></script>
         <script src="charts/donutchart.js"></script>
-        <script src="charts/donutchart2.js"></script>
+        <script src="charts/horizontal.js"></script>
         <script src="charts/radarchart.js"></script>
         <script src="charts/linechart.js"></script>
         <script src="charts/modalchart1.js"></script>
