--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -248,7 +248,7 @@
                 <div class="container-fluid py-5">
                     <h1 class="display-5 fw-bold">Что означают метрики?</h1>
                     <p class="col-md-8 fs-4">Представленные модели обучены на специальных метриках, индексах. Вы можете ознакомиться с ними с ними, перейдя по ссылке ниже.</p>
-                    <button class="btn btn-primary btn-lg" type="button">Посмотреть метрики</button>
+                    <button class="btn btn-primary btn-lg" data-bs-toggle="modal" data-bs-target="#readmeModal" type="button">Посмотреть метрики</button>
                 </div>
             </div>
 
@@ -257,7 +257,7 @@
             </footer>
         </div>
 
-        <!-- Тестовое Модальное окно -->
+        <!-- Модальное окно с грфиком -->
         <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -269,6 +269,60 @@
                   <div class="chart-container" style="min-height: 400px; width: 100%;">
                       <canvas id="modalChart1"></canvas>
                   </div>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Модальное окно с информацией -->
+        <div class="modal fade" id="readmeModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content bg-body-tertiary rounded-3 p-4">
+              <div class="modal-header">
+                <h5 class="modal-title text-body-emphasis" id="exampleModalLabel">Пояснение метрик</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Закрыть"></button>
+              </div>
+              <div class="modal-body">
+                <div class="mb-4">
+                  <p class="opacity-75">
+                    Ниже представлены ключевые метрики, используемые для оценки стартапа. Все суммы указаны в долларах.
+                  </p>
+                </div>
+
+                <h6 class="text-body-emphasis mt-4">Финансовые показатели</h6>
+                <ul class="list-group list-group-flush mb-4">
+                  <li class="list-group-item bg-transparent">
+                    <strong>start_m:</strong> стартовый капитал
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>investments:</strong> поступившие инвестиции за определённый промежуток времени
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>crowdfunding:</strong> средства, собранные с предзаказов или краудфандинговых платформ
+                  </li>
+                </ul>
+
+                <h6 class="text-body-emphasis mt-4">Индексы оценки</h6>
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item bg-transparent">
+                    <strong>demand:</strong> индекс возможного спроса на проект
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>comp_idx:</strong> индекс конкурентоспособности
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>team_idx:</strong> индекс успешности команды
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>tech_idx:</strong> индекс технологических инноваций, оценивающий технологическую ценность стартапа
+                  </li>
+                  <li class="list-group-item bg-transparent">
+                    <strong>social_idx:</strong> индекс популярности среди аудитории, оценивающий реакцию общества на проект
+                  </li>
+                </ul>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Закрыть</button>
