--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -211,7 +211,7 @@
                 <div class="col-md-6 mb-4">
                     <div class="h-100 p-2 bg-body-tertiary border rounded-3">
                         <div class="radar-containert">
-                            <canvas id="radarChart"></canvas>
+                            <canvas id="radarChart" style="max-height: 450px;"></canvas>
                         </div>
                     </div>
                 </div>
