--load small path in reasons

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -165,7 +165,7 @@
                               <h6 class="mb-0">Уровень возможного спроса</h6>
                               <p class="mb-0 opacity-75" data-index="0">Тут будет оценка.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">mid</small>
+                            <small class="opacity-50 text-nowrap">чё?</small>
                           </div>
                         </a>
                         <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -174,7 +174,7 @@
                               <h6 class="mb-0">Характеристика конкурентоспособности</h6>
                               <p class="mb-0 opacity-75" data-index="1">Тут будет оценка.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">max</small>
+                            <small class="opacity-50 text-nowrap">чё?</small>
                           </div>
                         </a>
                         <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -183,7 +183,7 @@
                               <h6 class="mb-0">Характеристика команды</h6>
                               <p class="mb-0 opacity-75" data-index="2">Тут будет оценка.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">low</small>
+                            <small class="opacity-50 text-nowrap">чё?</small>
                           </div>
                         </a>
                         <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -192,7 +192,7 @@
                               <h6 class="mb-0">Технологические инвестиции</h6>
                               <p class="mb-0 opacity-75" data-index="3">Тут будет оценка.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">low</small>
+                            <small class="opacity-50 text-nowrap">чё?</small>
                           </div>
                         </a>
                         <a class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
@@ -201,7 +201,7 @@
                               <h6 class="mb-0">Реакция общества</h6>
                               <p class="mb-0 opacity-75" data-index="4">Тут будет оценка.</p>
                             </div>
-                            <small class="opacity-50 text-nowrap">low</small>
+                            <small class="opacity-50 text-nowrap">чё?</small>
                           </div>
                         </a>
                       </div>
