--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -83,8 +83,8 @@
                   <h1 class="fw-light">Album example</h1>
                   <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
                   <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
+                    <span class="badge text-bg-primary rounded-pill">Технологии</span>
+                    <span class="badge text-bg-secondary rounded-pill">Искусственный интеллект</span>
                   </p>
                 </div>
               </div>
