--load dynamic-conclusion

--- a/frontend/pages/project/project.html
+++ b/frontend/pages/project/project.html
@@ -80,7 +80,7 @@
             <section class="py-5 text-center container">
               <div class="row py-lg-5">
                 <div class="col-lg-6 col-md-8 mx-auto">
-                  <h1 class="fw-light">Album example</h1>
+                  <h1 class="fw-light">ogo project</h1>
                   <p class="lead text-body-secondary">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
                   <p>
                     <span class="badge text-bg-primary rounded-pill">Технологии</span>
@@ -91,9 +91,9 @@
             </section>
 
             <div class="p-5 mb-4 bg-body-tertiary rounded-3">
-              <div class="container-fluid py-3">
+              <div class="container-fluid py-3" id="dynamic-conclusion">
                 <h1 class="display-5 fw-bold">Краткая характеристика</h1>
-                <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+                <p class="col-md-8 fs-4" data-index="0">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
               </div>
             </div>
 
@@ -342,6 +342,7 @@
             crossorigin="anonymous"
         ></script>
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script src="scripts/conclusion.js"></script>
         <script src="scripts/reasons.js" defer></script>
         <script src="scripts/selector.js" defer></script>
         <script src="scripts/theme-toggle.js"></script>
