--load checkout bug fix

--- a/frontend/pages/checkout/checkout.html
+++ b/frontend/pages/checkout/checkout.html
@@ -267,7 +267,7 @@
                             <h4 class="mb-3">Характеристики аудитории и спроса</h4>
 
                             <div class="col-md-6">
-                                <label for="DemandIdx" class="form-label" >Уровень оцениваемой востребованности</label>
+                                <label for="DemandIdx" class="form-label" >Уровень востребованности</label>
                                 <select class="form-select" id="DemandIdx" required>
                                     <option value="">Выбрать...</option>
                                     <option>Низкое влияние</option>
